--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-albumentations==0.4.3
-opencv-python
+numpy==1.23.1
+--pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cpu
+
+albumentations==0.4.6
+diffusers
+opencv-python==4.6.0.66
 pudb==2019.2
+invisible-watermark
 imageio==2.9.0
 imageio-ffmpeg==0.4.2
 pytorch-lightning==1.4.2
-torchmetrics==0.6
 omegaconf==2.1.1
 test-tube>=0.7.5
 streamlit>=0.73.1
 einops==0.3.0
+torch-fidelity==0.3.0
 transformers==4.19.2
-webdataset==0.2.5
-open-clip-torch==2.7.0
-gradio==3.11
+torchmetrics==0.6.0
 kornia==0.6
-invisible-watermark>=0.1.5
-streamlit-drawable-canvas==0.8.0
--e .
+open_clip_torch==2.8.2
+-e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers
+-e git+https://github.com/openai/CLIP.git@main#egg=clip
